# txtsearch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: claude-code-review.yml
docs/mvp/: 01-prd.md  02-tdd.md  03-roadmap.md  04-tickets.md
src/txtsearch/: __init__.py  cli.py  main.py
src/txtsearch/models/: __init__.py  base.py  chunk.py  document.py  enums.py  hit.py  query.py  tables.py
src/txtsearch/services/: __init__.py  chunker.py  factory.py  file_walker.py  index.py  metadata_store.py  vector_store.py
tests/integration/services/: test_vector_store_integration.py
tests/unit/models/: __init__.py  test_document.py  test_document_chunk.py  test_query.py  test_search_hit.py
tests/unit/services/: test_chunker.py  test_factory.py  test_file_walker.py  test_index.py  test_metadata_store.py  test_vector_store.py
