[project]
name = "txtsearch"
version = "0.1.0"
description = "A CLI tool for searching text files with advanced pattern matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "chroma>=0.2.0",
    "chromadb>=1.3.0",
    "docling>=2.60.0",
    "duckdb>=1.4.1",
    "fastapi[standard]",
    "fastmcp",
    "litellm>=1.79.1",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.9.1",
    "sqlmodel>=0.0.27",
    "structlog>=25.4.0",
    "typer>=0.17.4",
]

[project.scripts]
txtsearch = "txtsearch.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.139.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests that require external services or network access",
]

[tool.ty]
rules = { unresolved-import = "ignore" }

[tool.ty.src]
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src/txtsearch"]
